--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.5;
     background-color: #fdfeff;
+    color:  #293c44;
   }
 
 .navbar {
@@ -75,12 +76,15 @@ margin-right: 50px;
 
 .grid-text {
   background-color: rgb(145, 218, 218);
-  width: 200px;
   height: 62px;
 margin-right: 50px;
 margin-top: 120px;
-color: #293033;
+color: #293c44;
 } 
+
+h5, h6 {
+  color: #293c44;
+}
 
  
 #contact a {
@@ -88,4 +92,10 @@ color: #293033;
   text-decoration: underline;
   font-weight: bold;
 font-size: 1.5em;
+}
+h3 {
+  font-size: 2vw;
+}
+p {
+  font-size: 1.05vw;
 }
