--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@
     background-color: rgb(145, 218, 218);
   }
 
+  .btn:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
 #contact a {
   color:  #293c44;
   text-decoration: underline;
